--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-newer": "^1.4.0",
     "gulp-nodemon": "^2.2.1",
+    "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^5.0.0",
     "http-server": "^0.11.1",
