Add: CHECK button handling

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,9 @@
     "es6": true,
     "browser": true
   },
+  "globals": {
+    "M": true
+  },
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module",
