--- a/package.json
+++ b/package.json
@@ -66,7 +66,10 @@
     ]
   },
   "dependencies": {
-    "chalk": "^2.4.0"
+    "babel-plugin-external-helpers": "^6.22.0",
+    "chalk": "^2.4.0",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "twitter-text": "^2.0.4"
   },
   "scripts": {
     "start": "gulp dev"
