--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -17,6 +18,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "chai": "^3.5.0",
+    "chalk": "^2.4.0",
     "cross-env": "^5.1.4",
     "del": "^3.0.0",
     "eslint": "^4.4.1",
@@ -37,9 +39,11 @@
     "plop": "^1.8.0",
     "rollup": "^0.58.2",
     "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-uglify": "^3.0.0",
-    "run-sequence": "^2.2.0"
+    "run-sequence": "^2.2.0",
+    "twitter-text": "^2.0.4"
   },
   "babel": {
     "presets": [
@@ -64,12 +68,6 @@
       "transform-class-properties",
       "transform-object-rest-spread"
     ]
-  },
-  "dependencies": {
-    "babel-plugin-external-helpers": "^6.22.0",
-    "chalk": "^2.4.0",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "twitter-text": "^2.0.4"
   },
   "scripts": {
     "start": "gulp dev"
