--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "gulpfile.babel.js",
   "author": "Raphael Beer <raphael.beer@protonmail.com>",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/rbeer/TwitterShadowBanV2"
+    "type": "git",
+    "url": "https://github.com/rbeer/TwitterShadowBanV2"
   },
   "license": "MIT",
   "private": true,
@@ -47,7 +47,9 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-uglify": "^3.0.0",
     "run-sequence": "^2.2.0",
-    "twitter-text": "^2.0.4"
+    "twitter-text": "^2.0.4",
+    "jsdom": "^11.11.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "babel": {
     "presets": [
