--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "browser": true
   },
   "globals": {
-    "M": true
+    "M": true,
+    "$": true
   },
   "parserOptions": {
     "ecmaVersion": 6,
