--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development gulp dev",
     "dev": "cross-env NODE_ENV=development gulp dev",
+    "dev:frontend": "cross-env NODE_ENV=development NO_BACKEND=1 gulp dev",
     "build": "cross-env NODE_ENV=production gulp build",
     "build:dev": "cross-env NODE_ENV=development gulp build"
   },
