--- a/package.json
+++ b/package.json
@@ -54,9 +54,7 @@
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-uglify": "^3.0.0",
-    "run-sequence": "^2.2.0",
-    "twitter-text": "^2.0.4",
-    "xmlhttprequest": "^1.8.0"
+    "run-sequence": "^2.2.0"
   },
   "babel": {
     "presets": [
