--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "twitter-shadowban-tests",
-  "version": "1.3.3",
-  "description": "Twitter ShadowBan Tests",
+  "name": "shadowban-eu-frontend",
+  "version": "3.0.0-pre",
+  "description": "Frontend for https://shadowban.eu",
   "main": "gulpfile.babel.js",
   "author": "Raphael Beer <raphael.beer@protonmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/shadowban-eu/TwitterShadowBanV2"
+    "url": "https://github.com/shadowban-eu/shadowban-eu-frontend.git"
   },
   "license": "GPL-3.0-only",
   "private": true,
