--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   "license": "GPL-3.0-only",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=development gulp dev",
-    "dev": "cross-env NODE_ENV=development gulp dev",
-    "dev:frontend": "cross-env NODE_ENV=development NO_BACKEND=1 gulp dev",
-    "build": "cross-env NODE_ENV=production gulp build",
-    "build:dev": "cross-env NODE_ENV=development gulp build"
+    "start": "npm dev",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
