--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
     "dotenv": "^6.0.0",
+    "dotenv-expand": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^0.8.0",
