--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "dotenv": "^6.0.0",
     "dotenv-expand": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "i18next": "^17.0.12",
+    "i18next-browser-languagedetector": "^3.0.3",
+    "i18next-xhr-backend": "^3.1.2",
     "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
