--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "html-webpack-plugin": "^3.2.0",
     "i18next": "^17.0.12",
     "i18next-browser-languagedetector": "^3.0.3",
+    "i18next-chained-backend": "^2.0.0",
+    "i18next-localstorage-backend": "^3.0.0",
     "i18next-xhr-backend": "^3.1.2",
     "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^0.8.0",
