--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "babel-eslint": "^8.2.3",
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
-    "browser-sync-webpack-plugin": "2.2.2",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.3",
+    "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^5.2.0",
     "css-loader": "^3.1.0",
     "cssnano": "^4.1.10",
@@ -47,31 +47,22 @@
     "sass-lint": "^1.13.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.3.0",
+    "terser-webpack-plugin": "^1.4.1",
     "url-loader": "^2.1.0",
     "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7"
-  },
-  "dependencies": {
+    "webpack-cli": "^3.3.7",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "autoprefixer": "^9.6.1",
-    "browser-sync-webpack-plugin": "^2.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
     "dotenv": "^6.0.0",
     "dotenv-expand": "^5.1.0",
-    "html-webpack-plugin": "^3.2.0",
     "i18next": "^17.0.12",
     "i18next-browser-languagedetector": "^3.0.3",
     "i18next-chained-backend": "^2.0.0",
     "i18next-localstorage-backend": "^3.0.0",
+    "i18next-versioning-webpack-plugin": "git+https://github.com/shadowban-eu/i18next-versioning-webpack-plugin.git",
     "i18next-xhr-backend": "^3.1.2",
-    "imagemin-webpack-plugin": "^2.4.2",
-    "mini-css-extract-plugin": "^0.8.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "terser-webpack-plugin": "^1.4.1",
     "webpack-dev-server": "^3.8.0"
   }
 }
