--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shadowban-eu-frontend",
-  "version": "3.0.0-pre",
+  "version": "3.0.0",
   "description": "Frontend for https://shadowban.eu",
   "author": "Raphael Beer <raphael.beer@protonmail.com>",
   "repository": {
