--- a/src/manifest.json
+++ b/src/manifest.json
@@ -19,9 +19,7 @@
     "method": "GET",
     "enctype": "application/x-www-form-urlencoded",
     "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url"
+      "text": "text"
     }
   }
 }
